--- a/web/index.html
+++ b/web/index.html
@@ -4,113 +4,699 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RasPi TODO</title>
+    <!-- Import Google Fonts for better typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Import Lucide Icons for beautiful icons -->
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <style>
-      body {
-        font-family:
-          system-ui,
-          -apple-system,
-          Segoe UI,
-          Roboto,
-          Helvetica,
-          Arial,
-          sans-serif;
+      :root {
+        /* Color System */
+        --primary-50: #eff6ff;
+        --primary-100: #dbeafe;
+        --primary-500: #3b82f6;
+        --primary-600: #2563eb;
+        --primary-700: #1d4ed8;
+
+        --gray-50: #f9fafb;
+        --gray-100: #f3f4f6;
+        --gray-200: #e5e7eb;
+        --gray-300: #d1d5db;
+        --gray-400: #9ca3af;
+        --gray-500: #6b7280;
+        --gray-600: #4b5563;
+        --gray-700: #374151;
+        --gray-800: #1f2937;
+        --gray-900: #111827;
+
+        --success-50: #f0fdf4;
+        --success-100: #dcfce7;
+        --success-500: #22c55e;
+        --success-600: #16a34a;
+
+        --warning-50: #fffbeb;
+        --warning-100: #fef3c7;
+        --warning-500: #f59e0b;
+        --warning-600: #d97706;
+
+        --danger-50: #fef2f2;
+        --danger-100: #fee2e2;
+        --danger-500: #ef4444;
+        --danger-600: #dc2626;
+
+        /* Typography */
+        --font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont,
+          'Segoe UI', sans-serif;
+
+        /* Spacing */
+        --space-1: 0.25rem;
+        --space-2: 0.5rem;
+        --space-3: 0.75rem;
+        --space-4: 1rem;
+        --space-5: 1.25rem;
+        --space-6: 1.5rem;
+        --space-8: 2rem;
+        --space-12: 3rem;
+
+        /* Border Radius */
+        --radius-sm: 0.375rem;
+        --radius-md: 0.5rem;
+        --radius-lg: 0.75rem;
+        --radius-xl: 1rem;
+
+        /* Shadows */
+        --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+        --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1),
+          0 2px 4px -2px rgb(0 0 0 / 0.1);
+        --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+          0 4px 6px -4px rgb(0 0 0 / 0.1);
+        --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+          0 8px 10px -6px rgb(0 0 0 / 0.1);
+      }
+
+      * {
         margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
+
+      body {
+        font-family: var(--font-family);
+        background: linear-gradient(
+          135deg,
+          var(--gray-50) 0%,
+          var(--primary-50) 100%
+        );
+        color: var(--gray-900);
+        line-height: 1.6;
+        min-height: 100vh;
+      }
+
       .container {
-        max-width: 980px;
+        max-width: 1200px;
         margin: 0 auto;
-        padding: 16px;
+        padding: var(--space-4);
       }
-      .toolbar {
+
+      /* Header Styles */
+      header {
+        background: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        border-bottom: 1px solid var(--gray-200);
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        margin-bottom: var(--space-6);
+      }
+
+      .header-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: var(--space-4) 0;
+      }
+
+      .logo {
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: var(--space-3);
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: var(--primary-600);
+      }
+
+      .logo-icon {
+        width: 32px;
+        height: 32px;
+        background: var(--primary-500);
+        border-radius: var(--radius-lg);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+      }
+
+      /* Navigation */
+      nav {
+        display: flex;
+        gap: var(--space-2);
+      }
+
+      .nav-link {
+        display: flex;
+        align-items: center;
+        gap: var(--space-2);
+        padding: var(--space-3) var(--space-4);
+        border-radius: var(--radius-md);
+        text-decoration: none;
+        color: var(--gray-600);
+        font-weight: 500;
+        transition: all 0.2s ease;
+        position: relative;
+      }
+
+      .nav-link:hover {
+        background: var(--gray-100);
+        color: var(--gray-900);
+      }
+
+      .nav-link.active {
+        background: var(--primary-100);
+        color: var(--primary-700);
+        font-weight: 600;
+      }
+
+      /* Form Elements */
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-2);
+      }
+
+      .form-row {
+        display: flex;
+        gap: var(--space-3);
+        align-items: end;
         flex-wrap: wrap;
       }
+
       .input,
-      select {
-        padding: 8px;
-        border: 1px solid #ddd;
-        border-radius: 6px;
+      select,
+      textarea {
+        padding: var(--space-3) var(--space-4);
+        border: 2px solid var(--gray-200);
+        border-radius: var(--radius-md);
+        font-size: 0.875rem;
+        font-family: inherit;
+        transition: all 0.2s ease;
+        background: white;
+        flex: 1;
+        min-width: 120px;
       }
+
+      .input:focus,
+      select:focus,
+      textarea:focus {
+        outline: none;
+        border-color: var(--primary-500);
+        box-shadow: 0 0 0 3px var(--primary-100);
+      }
+
+      .input::placeholder {
+        color: var(--gray-400);
+      }
+
+      /* Buttons */
       .btn {
-        padding: 8px 12px;
-        border: 1px solid #ccc;
-        background: #fafafa;
-        border-radius: 6px;
+        display: inline-flex;
+        align-items: center;
+        gap: var(--space-2);
+        padding: var(--space-3) var(--space-4);
+        border: none;
+        border-radius: var(--radius-md);
+        font-size: 0.875rem;
+        font-weight: 500;
+        font-family: inherit;
         cursor: pointer;
+        transition: all 0.2s ease;
+        white-space: nowrap;
+        text-decoration: none;
       }
-      .btn.primary {
-        background: #0ea5e9;
+
+      .btn-sm {
+        padding: var(--space-2) var(--space-3);
+        font-size: 0.75rem;
+      }
+
+      .btn-primary {
+        background: var(--primary-500);
         color: white;
-        border-color: #0ea5e9;
       }
-      .btn.danger {
-        background: #ef4444;
+
+      .btn-primary:hover {
+        background: var(--primary-600);
+        transform: translateY(-1px);
+        box-shadow: var(--shadow-md);
+      }
+
+      .btn-secondary {
+        background: var(--gray-100);
+        color: var(--gray-700);
+        border: 1px solid var(--gray-200);
+      }
+
+      .btn-secondary:hover {
+        background: var(--gray-200);
+        border-color: var(--gray-300);
+      }
+
+      .btn-success {
+        background: var(--success-500);
         color: white;
-        border-color: #ef4444;
       }
+
+      .btn-success:hover {
+        background: var(--success-600);
+      }
+
+      .btn-warning {
+        background: var(--warning-500);
+        color: white;
+      }
+
+      .btn-warning:hover {
+        background: var(--warning-600);
+      }
+
+      .btn-danger {
+        background: var(--danger-500);
+        color: white;
+      }
+
+      .btn-danger:hover {
+        background: var(--danger-600);
+      }
+
+      /* Cards and Layout */
+      .page-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: var(--space-8);
+      }
+
+      .page-title {
+        font-size: 2rem;
+        font-weight: 700;
+        color: var(--gray-900);
+        display: flex;
+        align-items: center;
+        gap: var(--space-3);
+      }
+
       .grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-        gap: 12px;
-        margin-top: 12px;
+        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        gap: var(--space-6);
+        margin-top: var(--space-6);
       }
+
       .card {
-        border: 1px solid #e5e7eb;
-        border-radius: 10px;
-        padding: 12px;
-        background: #fff;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
+        background: white;
+        border-radius: var(--radius-xl);
+        padding: var(--space-6);
+        box-shadow: var(--shadow-md);
+        border: 1px solid var(--gray-100);
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
       }
-      .muted {
-        color: #6b7280;
-        font-size: 12px;
+
+      .card:hover {
+        transform: translateY(-2px);
+        box-shadow: var(--shadow-lg);
       }
-      .pill {
-        display: inline-block;
-        padding: 2px 8px;
-        border-radius: 20px;
-        font-size: 12px;
-        border: 1px solid #e5e7eb;
-      }
-      .pill.todo {
-        background: #fef3c7;
-      }
-      .pill.doing {
-        background: #dbeafe;
-      }
-      .pill.done {
-        background: #dcfce7;
-      }
-      .pill.archived {
-        background: #e5e7eb;
-      }
-      .prio-0 {
-        border-left: 6px solid #9ca3af;
-      }
-      .prio-1 {
-        border-left: 6px solid #60a5fa;
-      }
-      .prio-2 {
-        border-left: 6px solid #f59e0b;
-      }
-      .prio-3 {
-        border-left: 6px solid #ef4444;
-      }
-      .row {
+
+      .card-header {
         display: flex;
-        gap: 8px;
+        justify-content: space-between;
+        align-items: start;
+        margin-bottom: var(--space-4);
+      }
+
+      .card-title {
+        font-size: 1.125rem;
+        font-weight: 600;
+        color: var(--gray-900);
+        line-height: 1.4;
+      }
+
+      .card-content {
+        color: var(--gray-600);
+        margin-bottom: var(--space-4);
+        line-height: 1.5;
+      }
+
+      .card-footer {
+        display: flex;
+        gap: var(--space-2);
+        flex-wrap: wrap;
         align-items: center;
       }
-      header {
-        border-bottom: 1px solid #eee;
-        padding: 12px 0;
-        margin-bottom: 12px;
+
+      /* Status Pills */
+      .status-pill {
+        display: inline-flex;
+        align-items: center;
+        gap: var(--space-1);
+        padding: var(--space-1) var(--space-3);
+        border-radius: var(--radius-lg);
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
       }
-      a {
-        color: #0ea5e9;
-        text-decoration: none;
+
+      .status-pill.todo {
+        background: var(--warning-100);
+        color: var(--warning-600);
+      }
+
+      .status-pill.doing {
+        background: var(--primary-100);
+        color: var(--primary-600);
+      }
+
+      .status-pill.done {
+        background: var(--success-100);
+        color: var(--success-600);
+      }
+
+      .status-pill.archived {
+        background: var(--gray-100);
+        color: var(--gray-600);
+      }
+
+      /* Priority Indicators */
+      .priority-indicator {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 4px;
+      }
+
+      .priority-0 .priority-indicator {
+        background: var(--gray-400);
+      }
+
+      .priority-1 .priority-indicator {
+        background: var(--primary-500);
+      }
+
+      .priority-2 .priority-indicator {
+        background: var(--warning-500);
+      }
+
+      .priority-3 .priority-indicator {
+        background: var(--danger-500);
+      }
+
+      .priority-badge {
+        display: inline-flex;
+        align-items: center;
+        gap: var(--space-1);
+        padding: var(--space-1) var(--space-2);
+        border-radius: var(--radius-sm);
+        font-size: 0.75rem;
+        font-weight: 500;
+      }
+
+      .priority-0 .priority-badge {
+        background: var(--gray-100);
+        color: var(--gray-600);
+      }
+
+      .priority-1 .priority-badge {
+        background: var(--primary-100);
+        color: var(--primary-600);
+      }
+
+      .priority-2 .priority-badge {
+        background: var(--warning-100);
+        color: var(--warning-600);
+      }
+
+      .priority-3 .priority-badge {
+        background: var(--danger-100);
+        color: var(--danger-600);
+      }
+
+      /* Utility Classes */
+      .flex {
+        display: flex;
+      }
+
+      .flex-col {
+        flex-direction: column;
+      }
+
+      .items-center {
+        align-items: center;
+      }
+
+      .items-start {
+        align-items: flex-start;
+      }
+
+      .justify-between {
+        justify-content: space-between;
+      }
+
+      .gap-1 {
+        gap: var(--space-1);
+      }
+
+      .gap-2 {
+        gap: var(--space-2);
+      }
+
+      .gap-3 {
+        gap: var(--space-3);
+      }
+
+      .gap-4 {
+        gap: var(--space-4);
+      }
+
+      .text-sm {
+        font-size: 0.875rem;
+      }
+
+      .text-xs {
+        font-size: 0.75rem;
+      }
+
+      .text-muted {
+        color: var(--gray-500);
+      }
+
+      .text-red-600 {
+        color: #dc2626;
+      }
+
+      .font-medium {
+        font-weight: 500;
+      }
+
+      .font-semibold {
+        font-weight: 600;
+      }
+
+      .w-3 {
+        width: 0.75rem;
+      }
+
+      .h-3 {
+        height: 0.75rem;
+      }
+
+      .rounded-full {
+        border-radius: 50%;
+      }
+
+      .bg-yellow-400 {
+        background-color: #facc15;
+      }
+
+      .bg-blue-400 {
+        background-color: #60a5fa;
+      }
+
+      .bg-green-400 {
+        background-color: #4ade80;
+      }
+
+      .bg-white {
+        background-color: white;
+      }
+
+      .px-2 {
+        padding-left: var(--space-2);
+        padding-right: var(--space-2);
+      }
+
+      .py-1 {
+        padding-top: var(--space-1);
+        padding-bottom: var(--space-1);
+      }
+
+      .p-4 {
+        padding: var(--space-4);
+      }
+
+      .p-6 {
+        padding: var(--space-6);
+      }
+
+      .border-2 {
+        border-width: 2px;
+      }
+
+      .border-dashed {
+        border-style: dashed;
+      }
+
+      .border-gray-200 {
+        border-color: var(--gray-200);
+      }
+
+      .rounded-lg {
+        border-radius: var(--radius-lg);
+      }
+
+      .opacity-60 {
+        opacity: 0.6;
+      }
+
+      .mb-2 {
+        margin-bottom: var(--space-2);
+      }
+
+      .mb-4 {
+        margin-bottom: var(--space-4);
+      }
+
+      .mb-6 {
+        margin-bottom: var(--space-6);
+      }
+
+      .mt-4 {
+        margin-top: var(--space-4);
+      }
+
+      .mt-6 {
+        margin-top: var(--space-6);
+      }
+
+      /* Filter Bar */
+      .filter-bar {
+        background: white;
+        padding: var(--space-4);
+        border-radius: var(--radius-lg);
+        box-shadow: var(--shadow-sm);
+        border: 1px solid var(--gray-200);
+        margin-bottom: var(--space-6);
+      }
+
+      /* Loading State */
+      .loading {
+        display: inline-flex;
+        align-items: center;
+        gap: var(--space-2);
+        color: var(--gray-500);
+        font-size: 0.875rem;
+      }
+
+      .loading::before {
+        content: '';
+        width: 16px;
+        height: 16px;
+        border: 2px solid var(--gray-200);
+        border-top: 2px solid var(--primary-500);
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* Section Headers */
+      .section-header {
+        display: flex;
+        align-items: center;
+        gap: var(--space-3);
+        margin: var(--space-8) 0 var(--space-4) 0;
+        padding-bottom: var(--space-3);
+        border-bottom: 2px solid var(--gray-200);
+      }
+
+      .section-title {
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: var(--gray-800);
+      }
+
+      .section-count {
+        background: var(--gray-100);
+        color: var(--gray-600);
+        padding: var(--space-1) var(--space-2);
+        border-radius: var(--radius-lg);
+        font-size: 0.75rem;
+        font-weight: 500;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        .container {
+          padding: var(--space-3);
+        }
+
+        .form-row {
+          flex-direction: column;
+        }
+
+        .input {
+          min-width: auto;
+        }
+
+        .grid {
+          grid-template-columns: 1fr;
+          gap: var(--space-4);
+        }
+
+        .page-header {
+          flex-direction: column;
+          align-items: start;
+          gap: var(--space-4);
+        }
+
+        .nav {
+          flex-direction: column;
+          gap: var(--space-1);
+        }
+      }
+
+      /* Empty State */
+      .empty-state {
+        text-align: center;
+        padding: var(--space-12);
+        color: var(--gray-500);
+      }
+
+      .empty-state-icon {
+        width: 64px;
+        height: 64px;
+        margin: 0 auto var(--space-4);
+        color: var(--gray-300);
+      }
+
+      .empty-state-title {
+        font-size: 1.125rem;
+        font-weight: 600;
+        color: var(--gray-700);
+        margin-bottom: var(--space-2);
+      }
+
+      .empty-state-description {
+        color: var(--gray-500);
       }
     </style>
   </head>
