--- a/web/index.html
+++ b/web/index.html
@@ -175,13 +175,26 @@
         display: flex;
         flex-direction: column;
         gap: var(--space-2);
+        min-width: 120px;
       }
 
       .form-row {
         display: flex;
         gap: var(--space-3);
-        align-items: end;
+        align-items: flex-end;
         flex-wrap: wrap;
+      }
+
+      .form-row .form-group {
+        flex: 1;
+        min-width: 150px;
+      }
+
+      .form-group label {
+        font-size: 0.75rem;
+        font-weight: 500;
+        color: var(--gray-600);
+        margin-bottom: var(--space-1);
       }
 
       .input,
