--- a/web/index.html
+++ b/web/index.html
@@ -717,6 +717,146 @@
       .empty-state-description {
         color: var(--gray-500);
       }
+
+      /* Modal Styles */
+      .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+        padding: var(--space-4);
+      }
+
+      .modal-content {
+        background: white;
+        border-radius: var(--radius-lg);
+        box-shadow: var(--shadow-xl);
+        max-width: 600px;
+        width: 100%;
+        max-height: 90vh;
+        overflow-y: auto;
+        padding: var(--space-6);
+      }
+
+      .modal-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: var(--space-6);
+        padding-bottom: var(--space-4);
+        border-bottom: 1px solid var(--gray-200);
+      }
+
+      .modal-footer {
+        display: flex;
+        gap: var(--space-3);
+        justify-content: flex-end;
+        margin-top: var(--space-6);
+        padding-top: var(--space-4);
+        border-top: 1px solid var(--gray-200);
+      }
+
+      .textarea {
+        padding: var(--space-3);
+        border: 1px solid var(--gray-300);
+        border-radius: var(--radius-md);
+        font-family: inherit;
+        font-size: 0.875rem;
+        resize: vertical;
+        min-height: 120px;
+        width: 100%;
+        transition: border-color 0.2s ease;
+      }
+
+      .textarea:focus {
+        outline: none;
+        border-color: var(--primary-500);
+        box-shadow: 0 0 0 3px var(--primary-50);
+      }
+
+      /* Markdown Content Styles */
+      .markdown-content {
+        line-height: 1.6;
+      }
+
+      .markdown-content h1,
+      .markdown-content h2,
+      .markdown-content h3,
+      .markdown-content h4,
+      .markdown-content h5,
+      .markdown-content h6 {
+        margin-top: 1em;
+        margin-bottom: 0.5em;
+        font-weight: 600;
+      }
+
+      .markdown-content h1 {
+        font-size: 1.25em;
+      }
+      .markdown-content h2 {
+        font-size: 1.125em;
+      }
+      .markdown-content h3 {
+        font-size: 1.0625em;
+      }
+
+      .markdown-content p {
+        margin-bottom: 0.75em;
+      }
+
+      .markdown-content code {
+        background: var(--gray-100);
+        padding: 0.125em 0.25em;
+        border-radius: var(--radius-sm);
+        font-family: ui-monospace, 'SF Mono', Monaco, 'Cascadia Code',
+          'Roboto Mono', Consolas, 'Courier New', monospace;
+        font-size: 0.875em;
+      }
+
+      .markdown-content pre {
+        background: var(--gray-100);
+        padding: var(--space-3);
+        border-radius: var(--radius-md);
+        overflow-x: auto;
+        margin: 0.75em 0;
+      }
+
+      .markdown-content pre code {
+        background: none;
+        padding: 0;
+      }
+
+      .markdown-content strong {
+        font-weight: 600;
+      }
+
+      .markdown-content em {
+        font-style: italic;
+      }
+
+      .markdown-content ul,
+      .markdown-content ol {
+        margin-left: 1.5em;
+        margin-bottom: 0.75em;
+      }
+
+      .markdown-content li {
+        margin-bottom: 0.25em;
+      }
+
+      .markdown-content blockquote {
+        border-left: 4px solid var(--gray-300);
+        padding-left: var(--space-3);
+        margin: 0.75em 0;
+        color: var(--gray-600);
+        font-style: italic;
+      }
     </style>
   </head>
   <body>
