--- a/web/index.html
+++ b/web/index.html
@@ -602,6 +602,28 @@
         margin-top: var(--space-6);
       }
 
+      .space-y-4 > * + * {
+        margin-top: var(--space-4);
+      }
+
+      .select {
+        padding: var(--space-3) var(--space-4);
+        border: 2px solid var(--gray-200);
+        border-radius: var(--radius-md);
+        font-size: 0.875rem;
+        font-family: inherit;
+        transition: all 0.2s ease;
+        background: white;
+        flex: 1;
+        min-width: 120px;
+      }
+
+      .select:focus {
+        outline: none;
+        border-color: var(--primary-500);
+        box-shadow: 0 0 0 3px var(--primary-100);
+      }
+
       /* Filter Bar */
       .filter-bar {
         background: white;
