Add My Day page for in-progress tasks with priority grouping
Features:
- New My Day page showing only tasks with 'doing' status
- Tasks grouped by priority (Urgent, Important, Normal, Low)
- Overdue tasks highlighted and sorted to top of each priority group
- Visual indicators for overdue status with red badges and backgrounds
- Responsive grid layout that adapts to available priority columns
- Full task editing and status change functionality
- Integrated with existing modal system and WebSocket updates

Technical:
- Add new route /my-day with sun icon in navigation
- Priority-based filtering and sorting logic
- Enhanced CSS styles for overdue task highlighting
- TypeScript type safety fixes for due_at field handling
- Reusable components from existing Display and Admin pages

--- a/web/index.html
+++ b/web/index.html
@@ -979,6 +979,51 @@
       .min-h-32 {
         min-height: 8rem;
       }
+
+      /* Additional styles for My Day page */
+      .bg-red-500 {
+        background-color: #ef4444;
+      }
+
+      .bg-red-100 {
+        background-color: var(--danger-100);
+      }
+
+      .text-red-700 {
+        color: #b91c1c;
+      }
+
+      .border-l-4 {
+        border-left-width: 4px;
+      }
+
+      .border-l-red-500 {
+        border-left-color: #ef4444;
+      }
+
+      .absolute {
+        position: absolute;
+      }
+
+      .top-2 {
+        top: var(--space-2);
+      }
+
+      .right-2 {
+        right: var(--space-2);
+      }
+
+      .mt-3 {
+        margin-top: var(--space-3);
+      }
+
+      .grid-cols-3 {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      .w-full {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
