--- a/web/index.html
+++ b/web/index.html
@@ -1024,6 +1024,316 @@
       .w-full {
         width: 100%;
       }
+
+      /* Categories page styles */
+      .categories-page {
+        padding: var(--space-6) 0;
+      }
+
+      .page-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: var(--space-6);
+      }
+
+      .page-header h1 {
+        display: flex;
+        align-items: center;
+        gap: var(--space-3);
+        margin: 0;
+        font-size: 1.875rem;
+        font-weight: 700;
+        color: var(--text-primary);
+      }
+
+      .categories-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+        gap: var(--space-6);
+      }
+
+      .category-card {
+        background: var(--bg-card);
+        border: 1px solid var(--border-color);
+        border-radius: var(--radius-lg);
+        overflow: hidden;
+        box-shadow: var(--shadow-sm);
+        transition: all 0.2s ease;
+      }
+
+      .category-card:hover {
+        box-shadow: var(--shadow-md);
+      }
+
+      .category-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: var(--space-4);
+        border-bottom: 1px solid var(--border-color);
+      }
+
+      .category-info {
+        display: flex;
+        align-items: flex-start;
+        gap: var(--space-3);
+      }
+
+      .category-color {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        margin-top: 2px;
+        flex-shrink: 0;
+      }
+
+      .category-info h3 {
+        margin: 0 0 var(--space-1) 0;
+        font-size: 1.125rem;
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+
+      .category-description {
+        margin: 0 0 var(--space-2) 0;
+        font-size: 0.875rem;
+        color: var(--text-muted);
+      }
+
+      .todo-count {
+        font-size: 0.75rem;
+        color: var(--text-muted);
+        background: var(--bg-primary-subtle);
+        padding: 2px 8px;
+        border-radius: var(--radius-sm);
+      }
+
+      .category-actions {
+        display: flex;
+        gap: var(--space-2);
+      }
+
+      .category-actions .btn {
+        padding: var(--space-1) var(--space-2);
+      }
+
+      .todos-by-priority {
+        padding: var(--space-4);
+      }
+
+      .priority-group {
+        margin-bottom: var(--space-4);
+      }
+
+      .priority-group:last-child {
+        margin-bottom: 0;
+      }
+
+      .priority-header {
+        display: flex;
+        align-items: center;
+        gap: var(--space-2);
+        margin-bottom: var(--space-3);
+        font-size: 0.875rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+      }
+
+      .priority-todos {
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-2);
+      }
+
+      .todo-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: var(--space-3);
+        background: var(--bg-subtle);
+        border: 1px solid var(--border-color);
+        border-radius: var(--radius-md);
+        transition: all 0.2s ease;
+      }
+
+      .todo-item:hover {
+        background: var(--bg-primary-subtle);
+      }
+
+      .todo-item.status-done {
+        opacity: 0.6;
+      }
+
+      .todo-item.status-done .todo-title {
+        text-decoration: line-through;
+      }
+
+      .todo-content {
+        flex: 1;
+      }
+
+      .todo-title {
+        margin: 0 0 var(--space-1) 0;
+        font-size: 0.875rem;
+        font-weight: 500;
+        color: var(--text-primary);
+      }
+
+      .todo-note {
+        margin: 0 0 var(--space-2) 0;
+        font-size: 0.75rem;
+        color: var(--text-muted);
+        line-height: 1.4;
+      }
+
+      .todo-due {
+        display: flex;
+        align-items: center;
+        gap: var(--space-1);
+        font-size: 0.75rem;
+        color: var(--text-muted);
+      }
+
+      .todo-due .overdue {
+        color: var(--danger-600);
+        font-weight: 500;
+      }
+
+      .todo-actions {
+        flex-shrink: 0;
+      }
+
+      .status-select {
+        font-size: 0.75rem;
+        padding: 2px 6px;
+        border: 1px solid var(--border-color);
+        border-radius: var(--radius-sm);
+        background: var(--bg-primary);
+        color: var(--text-primary);
+      }
+
+      .modal-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1000;
+        padding: var(--space-4);
+      }
+
+      .modal {
+        background: var(--bg-primary);
+        border-radius: var(--radius-lg);
+        box-shadow: var(--shadow-lg);
+        max-width: 500px;
+        width: 100%;
+        max-height: 90vh;
+        overflow-y: auto;
+      }
+
+      .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: var(--space-4);
+        border-bottom: 1px solid var(--border-color);
+      }
+
+      .modal-header h2 {
+        margin: 0;
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+
+      .close-btn {
+        background: none;
+        border: none;
+        padding: var(--space-1);
+        cursor: pointer;
+        color: var(--text-muted);
+        border-radius: var(--radius-sm);
+        transition: all 0.2s ease;
+      }
+
+      .close-btn:hover {
+        background: var(--bg-subtle);
+        color: var(--text-primary);
+      }
+
+      .color-picker {
+        display: flex;
+        gap: var(--space-2);
+        flex-wrap: wrap;
+      }
+
+      .color-option {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        border: 2px solid transparent;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      .color-option:hover {
+        transform: scale(1.1);
+      }
+
+      .color-option.selected {
+        border-color: var(--text-primary);
+        box-shadow: 0 0 0 2px var(--bg-primary);
+      }
+
+      .form-actions {
+        display: flex;
+        justify-content: flex-end;
+        gap: var(--space-3);
+        padding: var(--space-4);
+        border-top: 1px solid var(--border-color);
+      }
+
+      .empty-state {
+        text-align: center;
+        padding: var(--space-8);
+        color: var(--text-muted);
+      }
+
+      .empty-state h3 {
+        margin: var(--space-4) 0 var(--space-2) 0;
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+
+      .empty-state p {
+        margin: 0 0 var(--space-4) 0;
+        font-size: 0.875rem;
+      }
+
+      @media (max-width: 768px) {
+        .categories-grid {
+          grid-template-columns: 1fr;
+        }
+
+        .page-header {
+          flex-direction: column;
+          gap: var(--space-4);
+          align-items: stretch;
+        }
+
+        .modal {
+          margin: var(--space-4);
+          max-width: none;
+        }
+      }
     </style>
   </head>
   <body>
